[tool.poetry]
name = "repl_python3_boilerplate-rock-paper-scissors"
version = "0.1.0"
description = ""
authors = ["aarontanx <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
tensorflow = "^2.6.0"
tensorflow-cpu = "^2.6.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
